resolve-remove-func-problem